# Copyright 2018- The Pixie Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("//bazel:images.bzl", "bundle_version_provider", "image_prefix_provider")

package(default_visibility = ["//visibility:public"])

string_flag(
    name = "image_version",
    build_setting_default = "latest",
)

bundle_version_provider(
    name = "bundle_version",
)

string_flag(
    name = "image_repository",
    build_setting_default = "localhost:5000",
)

image_prefix_provider(
    name = "image_prefix",
)
