package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:cc_resource.bzl", "pl_cc_resource")
load("//bazel:pl_build_system.bzl", "pl_cc_binary", "pl_cc_library", "pl_cc_test")

pl_cc_binary(
    name = "sample-benchmark",
    srcs = ["sample-benchmark.cc"],
    deps = ["@com_google_benchmark//:benchmark_main"],
)

pl_cc_binary(
    name = "hello_bcc",
    srcs = ["hello_bcc.cc"],
    tags = ["linux_only"],
    deps = [
        "@com_iovisor_bcc//:bcc",
        "@com_llvm_lib//:llvm",
    ],
)

pl_cc_binary(
    name = "hello_arrow",
    srcs = ["hello_arrow.cc"],
    deps = [
        "//third_party:arrow",
    ],
)

pl_cc_resource(
    name = "saying",
    srcs = ["saying.txt"],
    tags = ["linux_only"],
)

pl_cc_binary(
    name = "resource",
    srcs = ["resource.cc"],
    tags = ["linux_only"],
    deps = [
        ":saying",
    ],
)

pl_cc_binary(
    name = "pypa_demo",
    srcs = ["pypa_demo.cc"],
    deps = [
        "//third_party:libpypa",
    ],
)

pl_cc_test(
    name = "libcuckoo_test",
    srcs = ["libcuckoo_test.cc"],
    deps = [
        "@com_efficient_libcuckoo//:libcuckoo",
    ],
)

pl_cc_test(
    name = "farmhash_test",
    srcs = ["farmhash_test.cc"],
    deps = [
        "@com_google_farmhash//:farmhash",
    ],
)

pl_cc_test(
    name = "sole_test",
    srcs = ["sole_test.cc"],
    deps = [
        "@com_github_rlyeh_sole//:sole",
    ],
)

pl_cc_test(
    name = "cpp_taskflow_test",
    srcs = ["cpp_taskflow_test.cc"],
    deps = [
        "@com_github_cpp_taskflow//:cpp_taskflow",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["hello.go"],
    importpath = "pixielabs.ai/pixielabs/throwaway",
)

go_binary(
    name = "throwaway",
    embed = [":go_default_library"],
)
