package(default_visibility = ["//visibility:public"])

load("//bazel:cc_resource.bzl", "pl_cc_resource")
load("//bazel:pl_build_system.bzl", "pl_cc_binary", "pl_cc_library", "pl_cc_test")

pl_cc_library(
    name = "natsc",
    srcs = glob(
        [
            "cnats.cc",
        ],
    ),
    deps = [
        "//third_party/foreign_cc:natsc",
    ],
)

pl_cc_binary(
    name = "natsc_binary",
    deps = [
        ":natsc",
        "//third_party/foreign_cc:natsc",
    ],
)

pl_cc_library(
    name = "concurrentqueue",
    srcs = glob(
        [
            "concurrentqueue.cc",
        ],
    ),
    deps = [
        "@com_github_cameron314_concurrentqueue//:concurrentqueue",
    ],
)
