# Copyright 2018- The Pixie Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("//bazel/graal:toolchain.bzl", "graal_native_toolchain")

toolchain_type(
    name = "toolchain_type",
)

graal_native_toolchain(
    name = "graal_native_image_compiler",
    graal_path = "/opt/graalvm-ce-java17-22.3.0",
)

toolchain(
    name = "graal-native-image-linux",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
    toolchain = ":graal_native_image_compiler",
    toolchain_type = ":toolchain_type",
)
