# Copyright 2018- The Pixie Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

string_flag(
    name = "test_runner",
    build_setting_default = "none",
    values = [
        "none",
        "sysroot_chroot",
        "qemu_with_kernel",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "test_runner_sysroot_chroot",
    flag_values = {
        ":test_runner": "sysroot_chroot",
    },
)

config_setting(
    name = "test_runner_qemu_with_kernel",
    flag_values = {
        ":test_runner": "qemu_with_kernel",
    },
)

filegroup(
    name = "empty",
)

alias(
    name = "test_runner_dep",
    actual = select({
        "test_runner_qemu_with_kernel": "//bazel/test_runners/qemu_with_kernel:runner",
        "test_runner_sysroot_chroot": "//bazel/test_runners/sysroot_chroot:runner",
        "//conditions:default": ":empty",
    }),
    visibility = ["//visibility:public"],
)
