load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["generate_load.go"],
    importpath = "pixielabs.ai/pixielabs/demos/load_generation",
    visibility = ["//visibility:private"],
    deps = [
        "//demos/load_generation/proto:load_config_go_proto",
        "//src/utils:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)

go_binary(
    name = "load_generation",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
