load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "load_generation_lib",
    srcs = ["generate_load.go"],
    importpath = "pixielabs.ai/pixielabs/demos/load_generation",
    visibility = ["//visibility:private"],
    deps = [
        "//demos/load_generation/proto:load_config_go_proto",
        "//src/utils",
        "@com_github_gogo_protobuf//proto",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
    ],
)

go_binary(
    name = "load_generation",
    embed = [":load_generation_lib"],
    visibility = ["//visibility:public"],
)
