package(default_visibility = ["//visibility:public"])

genrule(
    name = "customer-docs-bundle",
    srcs = [
        "package.json",
        "yarn.lock",
    ] + glob([
        "*.js",
        "src/**",
        "content/**",
    ]),
    outs = ["bundle.tar.gz"],
    cmd = """
      export PATH=/usr/local/bin:/opt/node/bin:$$PATH;
      export DOCSPATH=`pwd`/docs/customer
      pushd $${DOCSPATH};
      rm -rf node_modules public;
      yarn install;
      yarn build;
      tar -czvvf bundle.tar.gz public;
      popd;
      cp $${DOCSPATH}/bundle.tar.gz $@
      rm -f $${DOCSPATH}/bundle.tar.gz
    """,
    output_to_bindir = 1,  # We treat "outputs" as binaries.
    tags = [
        "no-sandbox",
    ],
)
