# Copyright 2018- The Pixie Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

# This build won't work without jsonrpcpp:
# Add @com_github_badaix_jsonrpcpp//:jsonrpcpp to deps of the cc_library below.
# Revert: https://phab.corp.pixielabs.ai/D7611.

load("//bazel:pl_build_system.bzl", "pl_cc_binary", "pl_cc_library")

package(
    default_visibility = ["//visibility:private"],
)

pl_cc_library(
    name = "cc_library",
    srcs = glob(
        ["*.cc"],
        exclude = ["client.cc"],
    ),
    hdrs = glob(["*.h"]),
    tags = ["manual"],
)

pl_cc_binary(
    name = "client",
    srcs = ["client.cc"],
    tags = ["manual"],
    deps = [":cc_library"],
)
