# Copyright 2018- The Pixie Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//bazel:pl_build_system.bzl", "pl_go_binary", "pl_go_image")

go_library(
    name = "http_echo_lib",
    srcs = ["main.go"],
    importpath = "px.dev/pixie/experimental/http_echo",
    tags = ["manual"],
    visibility = ["//visibility:private"],
)

pl_go_binary(
    name = "http_echo",
    embed = [":http_echo_lib"],
    tags = ["manual"],
    visibility = ["//visibility:private"],
)

pl_go_image(
    name = "http_echo_image",
    binary = ":http_echo",
    tags = ["manual"],
)

container_push(
    name = "push_http_echo_image",
    format = "Docker",
    image = ":http_echo_image",
    registry = "gcr.io",
    repository = "pixie-oss/pixie-dev/demo/http_echo_image",
    tag = "latest",
    tags = ["manual"],
)
