# Copyright 2018- The Pixie Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("//bazel:pl_build_system.bzl", "pl_cc_binary", "pl_cc_library", "pl_cc_test")

package(
    default_testonly = True,
)

pl_cc_library(
    name = "cc_library",
    srcs = glob(
        include = ["*.cc"],
        exclude = [
            "*_test.cc",
            "aliasing_finder.cc",
        ],
    ),
    hdrs = glob(include = ["*.h"]),
    tags = ["manual"],
    deps = [
        "//private/experimental/protobufs/proto:alias_pl_cc_proto",
        "//src/common/grpcutils:cc_library",
        "@com_google_protobuf//:protobuf",
    ],
)

pl_cc_test(
    name = "aliasing_test",
    srcs = ["aliasing_test.cc"],
    data = ["//private/experimental/protobufs/proto:test.proto"],
    tags = ["manual"],
    deps = [
        ":cc_library",
        "//private/experimental/protobufs/proto:test_pl_cc_proto",
        "//src/common/grpcutils:cc_library",
        "//src/stirling:cc_library",
    ],
)

pl_cc_binary(
    name = "aliasing_finder",
    srcs = ["aliasing_finder.cc"],
    tags = ["manual"],
    deps = [
        ":cc_library",
        "//private/experimental/protobufs/proto:alias_pl_cc_proto",
        "//src/common/grpcutils:cc_library",
    ],
)
